Massive update Encapsulated plugin Updated Plugin Library to 0.4.8